objects/EUR_CRM_CTM_Contract_Total_Recalculation__mdt.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Destination_API_Name_Fields__c</fullName>
        <label>Destination API Name Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Destination_Object_API_Name__c</fullName>
        <label>Destination Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Destination_Query__c</fullName>
        <label>Destination Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copy</fullName>
                    <default>true</default>
                    <label>Copy</label>
                </value>
                <value>
                    <fullName>Sum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Source_API_Name_Field__c</fullName>
        <label>Source API Name Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Source_Object_API_Name__c</fullName>
        <label>Source Object API Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Source_Query__c</fullName>
        <label>Source Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Source_Reference_API_Name_Field__c</fullName>
        <label>Source Reference API Name Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CTM Contract Total Recalculation</label>
    <listViews>
        <fullName>Custom_All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>EUR_CRM_Destination_Query__c</columns>
        <filterScope>Everything</filterScope>
        <label>Custom All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>CTM Contract Total Recalculations</pluralLabel>
</CustomObject>